# backend-makers-chatbot

./: .gitignore  README.md  migration.sql  pyproject.toml  requirements.txt
app/: config.env  main.py
app/core/: config.py
app/db/: supabase.py
app/models/: category.py  chat.py  database.py  models.py  product.py  recommendation.py
app/routers/: auth.py  category.py  chat.py  product.py  recommendation.py
app/schemas/: schemas.py
app/scripts/: migrate_data.py
app/services/: ai_recommendation_service.py  auth.py  category_service.py  chat.py  chat_service.py  product_service.py  recommendation.py  recommendation_service.py  store.py
ecommerce-chatbot/: pyproject.toml
ecommerce_chatbot/: __init__.py  chatbot.py  cli.py  database.py  inventory.py
