[tool.poetry]
name = "ecommerce-chatbot"
version = "0.1.0"
description = "An intelligent e-commerce assistant powered by FastAPI, LangChain, and Supabase"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.104.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
supabase = "^2.0.0"
psycopg2-binary = "^2.9.9"
langchain = "^0.0.350"
langchain-openai = "^0.0.3"
langgraph = "^0.0.10"
openai = "^1.3.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
websockets = "^12.0"
uuid = "^1.30"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
black = "^23.11.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
